// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/modalBase should renders correctly AlertContent type = check 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgba(43, 120, 238, 0.15)",
        "borderRadius": 100,
        "padding": 18,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#2B78EE",
        "fontFamily": "Neotis",
        "fontSize": 54,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`@npm/mobydick-core/modalBase should renders correctly AlertContent type = warning 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgba(43, 120, 238, 0.15)",
        "borderRadius": 100,
        "padding": 18,
      },
      {
        "backgroundColor": "#fff",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#fff",
        "fontFamily": "Neotis",
        "fontSize": 54,
      }
    }
  >
    
  </Text>
</View>
`;
